Update 05 and README

--- a/Functions_Jan2022/05_sort_data_choose_symbols.ipynb
+++ b/Functions_Jan2022/05_sort_data_choose_symbols.ipynb
@@ -1722,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "1675e29b-c4d4-4300-80eb-14747bfaf86b",
    "metadata": {},
    "outputs": [],
@@ -1733,31 +1733,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "b321fe07-52bf-486b-91dc-8cf1a44edc7d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ytd_FTD_pct': 62.62657210738902,\n",
-       " 'ytd_SI_pct': 48.360424417642314,\n",
+       "{'ytd_FTD_pct': 46.81116642179003,\n",
+       " 'ytd_SI_pct': 44.01265545552573,\n",
        " 'isETF': False}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "## Test reading dict \n",
-    "machine_learning_dict['GME']"
+    "machine_learning_dict['AMC']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "be6547a9-6690-428f-aae3-e6da9f00fb31",
    "metadata": {},
    "outputs": [],
@@ -1769,8 +1769,549 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "0a554a61-f754-4cbb-b8c0-1cbfd8110dc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ytd_FTD_pct</th>\n",
+       "      <th>ytd_SI_pct</th>\n",
+       "      <th>isETF</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AAA</th>\n",
+       "      <td>6.509500</td>\n",
+       "      <td>56.836414</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AACG</th>\n",
+       "      <td>43.101720</td>\n",
+       "      <td>52.552025</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAL</th>\n",
+       "      <td>9.543701</td>\n",
+       "      <td>40.394657</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAME</th>\n",
+       "      <td>26.854553</td>\n",
+       "      <td>54.646592</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAU</th>\n",
+       "      <td>6.608884</td>\n",
+       "      <td>47.253194</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZROZ</th>\n",
+       "      <td>22.228210</td>\n",
+       "      <td>38.800757</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZSAN</th>\n",
+       "      <td>7.370595</td>\n",
+       "      <td>45.013993</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZSL</th>\n",
+       "      <td>316.595785</td>\n",
+       "      <td>40.519211</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZYNE</th>\n",
+       "      <td>8.261376</td>\n",
+       "      <td>23.444842</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZYXI</th>\n",
+       "      <td>6.586610</td>\n",
+       "      <td>44.837661</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1563 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ytd_FTD_pct  ytd_SI_pct  isETF\n",
+       "AAA      6.509500   56.836414   True\n",
+       "AACG    43.101720   52.552025  False\n",
+       "AAL      9.543701   40.394657  False\n",
+       "AAME    26.854553   54.646592  False\n",
+       "AAU      6.608884   47.253194  False\n",
+       "...           ...         ...    ...\n",
+       "ZROZ    22.228210   38.800757   True\n",
+       "ZSAN     7.370595   45.013993  False\n",
+       "ZSL    316.595785   40.519211   True\n",
+       "ZYNE     8.261376   23.444842  False\n",
+       "ZYXI     6.586610   44.837661  False\n",
+       "\n",
+       "[1563 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ml_df = pd.DataFrame.from_dict(machine_learning_dict, orient='index')\n",
+    "ml_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "357ad6f9-1226-4eb0-9410-dcc1a343cfa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_short_interest_equities = ml_df.sort_values(by=['isETF','ytd_SI_pct'],ascending=[True,False])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "939f9166-45e3-44b5-9cce-77f81ff762a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ytd_FTD_pct</th>\n",
+       "      <th>ytd_SI_pct</th>\n",
+       "      <th>isETF</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>NEU</th>\n",
+       "      <td>7.929944</td>\n",
+       "      <td>64.060258</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PETS</th>\n",
+       "      <td>14.178725</td>\n",
+       "      <td>62.635524</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TCI</th>\n",
+       "      <td>9.465184</td>\n",
+       "      <td>62.577468</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SIRI</th>\n",
+       "      <td>10.005177</td>\n",
+       "      <td>60.541223</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BGS</th>\n",
+       "      <td>12.850851</td>\n",
+       "      <td>60.206058</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CAR</th>\n",
+       "      <td>7.317800</td>\n",
+       "      <td>59.320527</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HWBK</th>\n",
+       "      <td>11.137508</td>\n",
+       "      <td>58.102571</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EDSA</th>\n",
+       "      <td>36.322233</td>\n",
+       "      <td>57.350452</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>JKS</th>\n",
+       "      <td>14.610870</td>\n",
+       "      <td>57.239040</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CDXC</th>\n",
+       "      <td>12.224244</td>\n",
+       "      <td>56.956500</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AMEH</th>\n",
+       "      <td>12.454241</td>\n",
+       "      <td>56.374912</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>INTZ</th>\n",
+       "      <td>37.273918</td>\n",
+       "      <td>56.341924</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AMCX</th>\n",
+       "      <td>12.813113</td>\n",
+       "      <td>56.223917</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ARR</th>\n",
+       "      <td>5.577917</td>\n",
+       "      <td>55.956711</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DMRC</th>\n",
+       "      <td>6.218699</td>\n",
+       "      <td>55.844068</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VTSI</th>\n",
+       "      <td>10.301238</td>\n",
+       "      <td>55.562015</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UFAB</th>\n",
+       "      <td>14.807877</td>\n",
+       "      <td>55.483478</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CLR</th>\n",
+       "      <td>5.350823</td>\n",
+       "      <td>55.467244</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GALT</th>\n",
+       "      <td>9.957857</td>\n",
+       "      <td>55.384425</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MEDS</th>\n",
+       "      <td>79.268622</td>\n",
+       "      <td>55.220983</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ICPT</th>\n",
+       "      <td>9.993761</td>\n",
+       "      <td>55.219240</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BLIN</th>\n",
+       "      <td>105.080662</td>\n",
+       "      <td>55.182018</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SLNH</th>\n",
+       "      <td>22.890207</td>\n",
+       "      <td>55.065815</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PRPO</th>\n",
+       "      <td>31.404909</td>\n",
+       "      <td>54.747021</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>INVO</th>\n",
+       "      <td>10.708163</td>\n",
+       "      <td>54.741018</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VYGR</th>\n",
+       "      <td>14.132222</td>\n",
+       "      <td>54.689627</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAME</th>\n",
+       "      <td>26.854553</td>\n",
+       "      <td>54.646592</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>QUBT</th>\n",
+       "      <td>36.404082</td>\n",
+       "      <td>54.525821</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EYES</th>\n",
+       "      <td>37.687165</td>\n",
+       "      <td>54.524462</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CYTO</th>\n",
+       "      <td>15.296788</td>\n",
+       "      <td>54.515378</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MNOV</th>\n",
+       "      <td>8.179038</td>\n",
+       "      <td>54.477415</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SKT</th>\n",
+       "      <td>6.526759</td>\n",
+       "      <td>54.376586</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DYAI</th>\n",
+       "      <td>11.131353</td>\n",
+       "      <td>54.328744</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BMRA</th>\n",
+       "      <td>24.394190</td>\n",
+       "      <td>54.288809</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TATT</th>\n",
+       "      <td>22.103198</td>\n",
+       "      <td>54.241221</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IFF</th>\n",
+       "      <td>7.082880</td>\n",
+       "      <td>54.149538</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RVP</th>\n",
+       "      <td>20.346554</td>\n",
+       "      <td>54.123237</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BLPH</th>\n",
+       "      <td>41.299367</td>\n",
+       "      <td>54.107046</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SNOA</th>\n",
+       "      <td>66.273327</td>\n",
+       "      <td>53.967011</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ENOB</th>\n",
+       "      <td>22.991345</td>\n",
+       "      <td>53.942129</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>XBIO</th>\n",
+       "      <td>65.827783</td>\n",
+       "      <td>53.933424</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IHT</th>\n",
+       "      <td>183.193343</td>\n",
+       "      <td>53.862736</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CAAS</th>\n",
+       "      <td>11.352767</td>\n",
+       "      <td>53.753898</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CEMI</th>\n",
+       "      <td>32.024289</td>\n",
+       "      <td>53.746940</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ICLR</th>\n",
+       "      <td>5.291364</td>\n",
+       "      <td>53.743295</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TR</th>\n",
+       "      <td>6.991306</td>\n",
+       "      <td>53.681054</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IRBT</th>\n",
+       "      <td>5.658748</td>\n",
+       "      <td>53.602664</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CPIX</th>\n",
+       "      <td>66.012111</td>\n",
+       "      <td>53.596331</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZIVO</th>\n",
+       "      <td>53.646050</td>\n",
+       "      <td>53.567000</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZIOP</th>\n",
+       "      <td>7.675446</td>\n",
+       "      <td>53.380257</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ytd_FTD_pct  ytd_SI_pct  isETF\n",
+       "NEU      7.929944   64.060258  False\n",
+       "PETS    14.178725   62.635524  False\n",
+       "TCI      9.465184   62.577468  False\n",
+       "SIRI    10.005177   60.541223  False\n",
+       "BGS     12.850851   60.206058  False\n",
+       "CAR      7.317800   59.320527  False\n",
+       "HWBK    11.137508   58.102571  False\n",
+       "EDSA    36.322233   57.350452  False\n",
+       "JKS     14.610870   57.239040  False\n",
+       "CDXC    12.224244   56.956500  False\n",
+       "AMEH    12.454241   56.374912  False\n",
+       "INTZ    37.273918   56.341924  False\n",
+       "AMCX    12.813113   56.223917  False\n",
+       "ARR      5.577917   55.956711  False\n",
+       "DMRC     6.218699   55.844068  False\n",
+       "VTSI    10.301238   55.562015  False\n",
+       "UFAB    14.807877   55.483478  False\n",
+       "CLR      5.350823   55.467244  False\n",
+       "GALT     9.957857   55.384425  False\n",
+       "MEDS    79.268622   55.220983  False\n",
+       "ICPT     9.993761   55.219240  False\n",
+       "BLIN   105.080662   55.182018  False\n",
+       "SLNH    22.890207   55.065815  False\n",
+       "PRPO    31.404909   54.747021  False\n",
+       "INVO    10.708163   54.741018  False\n",
+       "VYGR    14.132222   54.689627  False\n",
+       "AAME    26.854553   54.646592  False\n",
+       "QUBT    36.404082   54.525821  False\n",
+       "EYES    37.687165   54.524462  False\n",
+       "CYTO    15.296788   54.515378  False\n",
+       "MNOV     8.179038   54.477415  False\n",
+       "SKT      6.526759   54.376586  False\n",
+       "DYAI    11.131353   54.328744  False\n",
+       "BMRA    24.394190   54.288809  False\n",
+       "TATT    22.103198   54.241221  False\n",
+       "IFF      7.082880   54.149538  False\n",
+       "RVP     20.346554   54.123237  False\n",
+       "BLPH    41.299367   54.107046  False\n",
+       "SNOA    66.273327   53.967011  False\n",
+       "ENOB    22.991345   53.942129  False\n",
+       "XBIO    65.827783   53.933424  False\n",
+       "IHT    183.193343   53.862736  False\n",
+       "CAAS    11.352767   53.753898  False\n",
+       "CEMI    32.024289   53.746940  False\n",
+       "ICLR     5.291364   53.743295  False\n",
+       "TR       6.991306   53.681054  False\n",
+       "IRBT     5.658748   53.602664  False\n",
+       "CPIX    66.012111   53.596331  False\n",
+       "ZIVO    53.646050   53.567000  False\n",
+       "ZIOP     7.675446   53.380257  False"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_short_interest_equities.head(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b7b1a39-da19-4472-9a38-f3f132ead6d5",
    "metadata": {},
    "outputs": [],
    "source": []
