Update evaluation code files

--- a/Functions_Date_shift_models/test_03_evaluate_NN.ipynb
+++ b/Functions_Date_shift_models/test_03_evaluate_NN.ipynb
@@ -110,8 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "5abd862c-c2c0-4c35-a582-e913132cff34",
+   "execution_count": 21,
+   "id": "add5f611-fbe8-4b98-9147-4c1035a3f3c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,16 +173,8 @@
     "    if return_data == True:\n",
     "        return X, y, features_df, new_close_df\n",
     "    else:\n",
-    "        return X, y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "add5f611-fbe8-4b98-9147-4c1035a3f3c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        return X, y\n",
+    "\n",
     "## Make function that accepts a symbol, and returns 4 dataframes of predicted data, for each model\n",
     "## that can then be used to make plots, etc. \n",
     "\n",
