Update evaluation code for Model sets 1-4

--- a/Functions_Evaluation/1_and2_howto_NN_model_evaluation.ipynb
+++ b/Functions_Evaluation/1_and2_howto_NN_model_evaluation.ipynb
@@ -478,6 +478,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "393337b0-db0c-47c4-baba-a05ee030045f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3069"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Export symbol_accuracy_dict\n",
+    "symbol_path = Path('../Resources/NN_noFTDall_symbol_list.pkl')\n",
+    "NN_symbols = load_obj(symbol_path)\n",
+    "len(NN_symbols) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ad298194-fb00-4365-b2bb-bfa8824fd550",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "767.25"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(NN_symbols) /4"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "1da7a77b-94bc-40e9-8326-841ec551ae94",
    "metadata": {},
@@ -515,7 +560,7 @@
     {
      "data": {
       "text/plain": [
-       "{'GME': {'w_FTD': {'model_1': {'loaded_model': <keras.engine.sequential.Sequential at 0x22ab6455388>,\n",
+       "{'GME': {'w_FTD': {'model_1': {'loaded_model': <keras.engine.sequential.Sequential at 0x21a4173c688>,\n",
        "    'model_summary': {'model_accuracy': 630.6928100585938,\n",
        "     'n_days': 10,\n",
        "     'validation_split_value': 0.1,\n",
@@ -535,7 +580,7 @@
        "    2022-01-14  116.650000  192.912033\n",
        "    \n",
        "    [1491 rows x 2 columns]},\n",
-       "   'model_2': {'loaded_model': <keras.engine.sequential.Sequential at 0x22abe801e88>,\n",
+       "   'model_2': {'loaded_model': <keras.engine.sequential.Sequential at 0x21a49bb2f88>,\n",
        "    'model_summary': {'model_accuracy': 504.6863708496094,\n",
        "     'n_days': 10,\n",
        "     'validation_split_value': 0.1,\n",
@@ -555,7 +600,7 @@
        "    2022-01-14  116.650000  188.119507\n",
        "    \n",
        "    [1491 rows x 2 columns]}},\n",
-       "  'woFTD': {'model_3': {'loaded_model': <keras.engine.sequential.Sequential at 0x22abf823b48>,\n",
+       "  'woFTD': {'model_3': {'loaded_model': <keras.engine.sequential.Sequential at 0x21a4abb5ac8>,\n",
        "    'model_summary': {'model_accuracy': 630.89501953125,\n",
        "     'n_days': 10,\n",
        "     'validation_split_value': 0.1,\n",
@@ -575,7 +620,7 @@
        "    2022-01-14  116.650000  193.529495\n",
        "    \n",
        "    [1491 rows x 2 columns]},\n",
-       "   'model_4': {'loaded_model': <keras.engine.sequential.Sequential at 0x22abf878548>,\n",
+       "   'model_4': {'loaded_model': <keras.engine.sequential.Sequential at 0x21a4ac0a208>,\n",
        "    'model_summary': {'model_accuracy': 486.2709655761719,\n",
        "     'n_days': 10,\n",
        "     'validation_split_value': 0.1,\n",
