Upload finished evaluation code

--- a/Functions_Evaluation/3_LSTM_model_evaluation.ipynb
+++ b/Functions_Evaluation/3_LSTM_model_evaluation.ipynb
@@ -189,22 +189,22 @@
    "outputs": [],
    "source": [
     "def load_and_predict_model(symbol):\n",
-    "    export_path='../Model_Data/LSTM_Model_Data_1/'\n",
+    "    import_path='../Model_Data/LSTM_Model_Data_1/'\n",
     "    model_type = 'LSTM'\n",
     "    #n_days_string = str(n_days)\n",
-    "    export_path_prefix = export_path+symbol+'_'+model_type\n",
+    "    import_path_prefix = import_path+symbol+'_'+model_type\n",
     "\n",
-    "    file_path = Path(export_path_prefix+'_model_data.json')\n",
+    "    file_path = Path(import_path_prefix+'_model_data.json')\n",
     "    with open(file_path, \"r\") as json_file:\n",
     "        model_json = json_file.read()\n",
     "    loaded_model = model_from_json(model_json)\n",
     "\n",
     "    # load weights into new model\n",
-    "    file_path = Path(export_path_prefix+'_model_weights.h5')\n",
+    "    file_path = Path(import_path_prefix+'_model_weights.h5')\n",
     "    loaded_model.load_weights(file_path)\n",
     "\n",
     "    ## Load model summary \n",
-    "    file_path = Path(export_path_prefix+'_model_results.pkl')\n",
+    "    file_path = Path(import_path_prefix+'_model_results.pkl')\n",
     "    model_summary = load_obj(file_path)\n",
     "\n",
     "    #pred_df = model_summary['prediction_df']\n",
