Push ppt presentation and updated README

--- a/Functions_Evaluation/1_and2_howto_NN_model_evaluation.ipynb
+++ b/Functions_Evaluation/1_and2_howto_NN_model_evaluation.ipynb
@@ -42,9 +42,11 @@
     "\n",
     "## Model locations: \n",
     "## Model_1: \n",
-    "# path_1 = Path('../Model_Data/Date_Test_NN_noFTD_all/')   ## Contains models trained without FTD data\n",
+    "# path_1 = Path('../Model_Data/Date_Test_NN_w_FTD_all/')   ## Contains models trained with FTD data\n",
     "## Model_2: \n",
-    "# path_2 = Path('../Model_Data/Date_Test_NN_w_FTD_all/')   ## Contains models trained with FTD data \n",
+    "# path_2 = Path('../Model_Data/Date_Test_NN_noFTD_all/')   ## Contains models trained without FTD data\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -241,7 +243,7 @@
     "    else:\n",
     "        return X, y\n",
     "\n",
-    "def get_prediction_dfs(symbol,n_days,\n",
+    "def load_and_predict_model(symbol,n_days,\n",
     "                       include_model_obj=True,  ## Return the loaded model itself as part of data - use false if only looking for acc values. \n",
     "                       return_indvidual_model=False, ## Will return only a single model if true \n",
     "                       model_='model_2'):       ## Indicates which model to return \n",
@@ -547,7 +549,7 @@
     "symbol = test_symbol\n",
     "\n",
     "## set include_model_obj==True to include all 4 model objects in return \n",
-    "test_data_dict = get_prediction_dfs(symbol,n_days,include_model_obj=True)\n",
+    "test_data_dict = load_and_predict_model(symbol,n_days,include_model_obj=True)\n",
     "#test_data_dict"
    ]
   },
@@ -836,7 +838,7 @@
    "source": [
     "## How to see predictions\n",
     "model_2_pred_df = test_data_dict[symbol]['w_FTD']['model_2']['prediction_df']\n",
-    "model_2_pred_df.tail(15)"
+    "model_2_pred_df.tail(n_days+5)"
    ]
   },
   {
